# fh6-tel

./: LICENSE  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  session.rs  settings.rs  udp.rs  update.rs
src/lib/: audio.ts  fh6-car-ordinals.json  types.ts
src/lib/components/: MapPanel.svelte  SessionDrawer.svelte  SessionViewer.svelte  SettingsModal.svelte  TopBar.svelte
src/routes/: +page.svelte
