[package]
name = "fh6-tel"
version = "1.2.3"
edition = "2021"
autobins = false
default-run = "fh6-tel"

[lib]
name = "fh6_tel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fh6-tel"
path = "src/main.rs"

[[bin]]
name = "fh6-tel-serve"
path = "src/serve.rs"
required-features = ["server"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
byteorder = "1"
dirs = "5"
thiserror = "1"

# server feature
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "trace"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rust-embed = { version = "8", optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio-stream", "dep:clap", "dep:rust-embed", "dep:futures"]

[profile.release]
strip = true
opt-level = "s"
lto = true
